Add user input string sanitizing to prevent XSS.

--- a/views/addbook.hbs
+++ b/views/addbook.hbs
@@ -1,5 +1,5 @@
 <div class="container">
-    <a href="#" onclick="window.history.go(-1); return false;" class="btn btn-success top-float-button" title="Back to book search"><span class="fa fa-arrow-left"></span> Back to search</a>
+    <a href="/books" class="btn btn-success top-float-button" title="Back to book search"><span class="fa fa-arrow-left"></span> Back to search</a>
     <h3>Enter the information for a new book below:</h3>
     <form action="/books/insertbook" method="post">
         <div class="form-group">
