--- a/views/includes/header.hbs
+++ b/views/includes/header.hbs
@@ -1,8 +1,8 @@
 <header>
     <div class="flex">
-        <h1><a href="/">Antoine's Collections</h1></a>
+        <h1><a href="/">Books</h1></a>
         <a id="logo" href="/" target="_blank">
-            <img src="/static/img/antoine.jpg" />
+            <!--<img src="/static/img/antoine.jpg" />-->
         </a>
     </div>
 </header>
