--- a/views/updatebook.hbs
+++ b/views/updatebook.hbs
@@ -1,5 +1,5 @@
 <div class="container">
-    <a href="#" onclick="window.history.go(-1); return false;" class="btn btn-success top-float-button" title="Back to book search"><span class="fa fa-arrow-left"></span> Back to search</a>
+    <a href="/books" class="btn btn-success top-float-button" title="Back to book search"><span class="fa fa-arrow-left"></span> Back to search</a>
     <h3>Update the information for <em>{{book.title}}</em> below:</h3>
     <form action="/books/updatebookbyid/{{book.id}}" method="POST">
         <div class="form-group">
